...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/aliasEdit"
                    style="@style/editTextAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="@string/hint_alias"
                    android:inputType="textUri" />

                <EditText
                    android:id="@+id/serverUrlEdit"
                    style="@style/editTextAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_server_url"
                    android:inputType="textUri" />

                <EditText
                    android:id="@+id/organizationEdit"
                    style="@style/editTextAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_organization"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/usernameEdit"
                    style="@style/editTextAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_username"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/passwordEdit"
                    style="@style/editTextAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
...
