<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012 Jaspersoft Corporation. All rights reserved.
    http://community.jaspersoft.com/project/jaspermobile-android

    Unless you have purchased a commercial license agreement from Jaspersoft,
    the following license terms apply:

    This program is part of Jaspersoft Mobile for Android.

    Jaspersoft Mobile is free software: you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Jaspersoft Mobile is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public License
    along with Jaspersoft Mobile for Android. If not, see
    <http://www.gnu.org/licenses/lgpl>.
-->

<resources>

    <!-- General -->
    <string name="app_label">JasperMobile</string>
    <!-- Action Bar -->
    <string name="ab_settings">Settings</string>

    <!-- Home Activity -->
    <string name="h_title">JasperMobile</string>
    <string name="h_repository_label">Repository</string>
    <string name="h_repository_descr">Browse and view repository items</string>
    <string name="h_library_label">Library</string>
    <string name="h_library_descr">List of all reports</string>
    <string name="h_search_label">Search</string>
    <string name="h_search_descr">Search for items in your repository</string>
    <string name="h_favorites_label">Favorites</string>
    <string name="h_favorites_descr">Browse and view favorite items</string>
    <string name="h_saved_reports_label">Saved Reports</string>
    <string name="h_saved_reports_descr">List of all saved reports</string>
    <string name="h_server_profile_label">"Server Profile: "</string>
    <string name="h_server_switched_toast">Server was switched to \"%s\"</string>
    <!-- Action Bar -->
    <string name="h_ab_servers">Servers</string>
    <!-- Connection Dialog -->
    <string name="h_ad_title_no_connection">No connection</string>
    <string name="h_ad_msg_no_connection">Please check your mobile network settings and try again.</string>
    <!-- Password Dialog -->
    <string name="h_ad_title_enter_password">Enter Password</string>
    <string name="h_ad_label_server_profile">Server Profile:</string>
    <string name="h_ad_label_organization">Organization:</string>
    <string name="h_ad_label_username">Username:</string>


    <!-- Server Profiles Manager Activity -->
    <string name="spm_list_title">Server Profiles</string>
    <!-- Toasts -->
    <string name="spm_profile_created_toast">New server profile successfully created.</string>
    <string name="spm_profile_updated_toast">Server profile successfully updated.</string>
    <string name="spm_profile_deleted_toast">Server profile successfully deleted.</string>
    <!-- Context Menu -->
    <string name="spm_cm_switch">Connect</string>
    <string name="spm_cm_edit">Edit</string>
    <string name="spm_cm_delete">Delete</string>
    <!-- Action Bar -->
    <string name="spm_ab_add_profile">Add Server Profile</string>
    <!-- Delete Dialog -->
    <string name="spm_ad_delete_profile_msg">Are you sure you want to delete this server profile?</string>
    <string name="spm_delete_btn">Delete</string>
    <string name="spm_cancel_btn">Cancel</string>


    <!-- Server Profile Activity -->
    <string name="sp_bc_add_profile">New Server Profile</string>
    <string name="sp_bc_edit_profile">Edit Server Profile</string>
    <string name="sp_name_label">Name:</string>
    <string name="sp_name_hint">my server name</string>
    <string name="sp_url_label">Server URL:</string>
    <string name="sp_url_hint">http://myserver.com</string>
    <string name="sp_org_label">Organization:</string>
    <string name="sp_organization_hint">organization id</string>
    <string name="sp_username_label">Username:</string>
    <string name="sp_username_hint">my user name</string>
    <string name="sp_password_label">Password:</string>
    <string name="sp_password_hint">my password</string>
    <string name="sp_ask_password_text">always ask for password</string>
    <string name="sp_save_btn">Save</string>
    <!-- Error messages -->
    <string name="sp_error_field_required">This field is required.</string>
    <string name="sp_error_url_not_valid">URL is not valid.</string>


    <!-- Repository Activity -->
    <string name="r_browser_nothing_to_display">There are no resources in this folder.</string>
    <string name="r_search_nothing_to_display">No results from search.</string>
    <!-- Action Bar -->
    <string name="r_ab_favorites">Favorites</string>
    <string name="r_ab_search">Search</string>
    <string name="r_ab_refresh">Refresh</string>
    <!-- Context Menu -->
    <string name="r_cm_open">Open</string>
    <string name="r_cm_run">Run</string>
    <string name="r_cm_view_details">View Details</string>
    <string name="r_cm_add_to_favorites">Add to favorites</string>
    <string name="r_cm_remove_from_favorites">Remove from favorites</string>
    <!-- Progress Dialog -->
    <string name="r_pd_running_report_msg">Running report…</string>
    <!-- Error messages -->
    <string name="r_error_server_not_supported">Server version is older than 5.0, which is not supported.</string>


    <!-- Search Activity -->
    <string name="s_title">Search Results</string>
    <string name="s_hint">Search resources</string>
    <!-- Action Bar -->
    <string name="s_ab_filter_by">Filter by</string>
    <!-- Filter Dialog -->
    <string name="s_fd_filter_by">Filter by</string>
    <string name="s_fd_option_all">All</string>
    <string name="s_fd_option_reports">Reports</string>
    <string name="s_fd_option_dashboards">Dashboards</string>


    <!-- Resource Info Activity -->
    <string name="ri_title">Resource Info</string>
    <string name="ri_properties">Resource Properties:</string>
    <string name="ri_name">Name:</string>
    <string name="ri_label">Label:</string>
    <string name="ri_description">Description:</string>
    <string name="ri_type">Type:</string>


    <!-- Report Options Activity -->
    <string name="ro_run_report_btn">Run Report</string>


    <!-- Report Viewer Activity -->
    <string name="rv_ab_save_report">Save Report</string>
    <!-- Toasts -->
    <string name="rv_t_external_storage_not_available">The external memory card is not available. Please mount the card and try again.</string>
    <string name="rv_t_report_saving_not_supported">This functionality is only available for JasperReports Server 5.2 or higher</string>

    <!-- Save Report Activity -->
    <string name="sr_ab_title">Save Report</string>
    <string name="sr_report_name">Report Name</string>
    <string name="sr_output_format">Output Format</string>
    <string name="sr_save_report_btn">Save</string>
    <!-- Toasts -->
    <string name="sr_t_report_saved">Report saved successfully</string>
    <!-- Error messages -->
    <string name="sr_error_field_is_empty">Can\'t be empty</string>
    <string name="sr_error_characters_not_allowed">Can\'t contain any of the following characters * \\ / \" \' : ? | &lt; &gt; + [ ]</string>
    <string name="sr_error_report_exists">A report with this name already exists</string>


    <!-- Favorites activity -->
    <string name="f_title">Favorites</string>


    <!-- Saved Reports Activity -->
    <string name="sdr_ab_title">Saved Reports</string>
    <!-- Context Menu -->
    <string name="sdr_cm_open">Open</string>
    <string name="sdr_cm_rename">Rename</string>
    <string name="sdr_cm_delete">Delete</string>
    <!-- Rename Report Dialog -->
    <string name="sdr_rrd_title">Rename report</string>
    <string name="sdr_rrd_msg">Enter new name:</string>
    <string name="sdr_rrd_hint">Report name</string>
    <string name="sdr_rrd_error_name_is_empty">Can\'t be empty</string>
    <string name="sdr_rrd_error_characters_not_allowed">Can\'t contain any of the following characters * \\ / \" \' : ? | &lt; &gt; + [ ]</string>
    <string name="sdr_rrd_error_report_exists">A report with this name already exists</string>
    <!-- Delete Report Dialog -->
    <string name="sdr_drd_title">Delete report</string>
    <string name="sdr_drd_msg">Do you really want to delete \"%s\"?</string>
    <!-- Toasts -->
    <string name="sdr_t_no_app_available">No \"%s\" viewer installed.</string>
    <string name="sdr_t_report_renaming_error">Cannot rename report</string>
    <string name="sdr_t_report_deletion_error">Cannot delete report</string>


    <!-- Settings activity -->
    <string name="st_title">Settings</string>
    <string name="st_category_repo_cache">Repository Cache</string>
    <string name="st_category_connection">Connection</string>
    <string name="st_title_cache_enable">Enable cache</string>
    <string name="st_title_cache_expiration">Cache expiration</string>
    <string name="st_title_connect_timeout">Connection timeout</string>
    <string name="st_title_read_timeout">Data read timeout</string>
    <string name="st_summary_cache_enable">Cache repository requests for the specified amount of time</string>
    <string name="st_summary_sec">%s sec</string>
    <string name="st_summary_h">%s h</string>


    <!-- Error messages -->
    <string name="error_http_400">400 - Bad Request. The request was invalid.</string>
    <string name="error_http_401">401 - Unauthorized.
                                  \nAuthentication credentials were missing or incorrect.
                                  \n\nDo you want to edit server profile?</string>
    <string name="error_http_403">403 - Permission Denied. The request is understood, but it has been refused.</string>
    <string name="error_http_404">404 - Not Found. The URI requested is invalid or the resource requested does not exists.</string>
    <string name="error_http_500">500 - Internal Server Error.</string>
    <string name="error_http_502">502 - Bad Gateway.</string>
    <string name="error_http_503">503 - Service Unavailable.</string>
    <string name="error_http_504">504 - Gateway Timeout.</string>

    <!-- Others -->
    <string name="loading_msg">Loading…</string>
    <string name="error_msg">Error</string>
    <string name="cancelled_msg">Cancelled</string>


</resources>